--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
     "vue-cli-plugin-axios": "latest",
-    "vue-cli-plugin-vuetify": "latest",
+    "vue-cli-plugin-vuetify": "^2.0.6",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
