--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VUE_APP_API=http://backend.daytrade.reviews
-VUE_APP_NAME=DayTrade.Reviews
+VUE_APP_API=https://api.xn--preguia-zxa.money
+VUE_APP_NAME=Preguiça
